# HTMLReader

./: .coveragerc  .gitignore  Dockerfile  LICENSE  Makefile  README.md  Z_teste.ipynb  pyproject.toml  pytest.ini  refatorar_estrutura.sh  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  setup.cfg  teste_valido.txt
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  custom.md  feature_request.md  pipeline-failure.md
.github/workflows/: CI-CD_pipeline.yml  bandit.yml  ci.yml  python_pipeline.yml
app-tkinter-venv/: pyvenv.cfg
app/core/controllers/: arquivos_controller.py  pastas_controller.py  sistema_controller.py
app/core/models/: __init__.py  model_arquivo.py  model_pasta.py  sistema_info.py
app/core/routes/: rota_sistema.py
app/core/utils/: formatadores.py  sistema_operacional.py
app/interfaces/api/: main_api.py
app/interfaces/api/routes/: infosistema_routes.py
app/interfaces/cli/: main_cli.py
app/interfaces/gui/widgets/: footer_widget.py  header_widget.py
scripts/: gerar_gitignore.py  post_setup.py  pre_setup.py  setup.py
src/: __init__.py  main.py  teste.ipynb  teste.py
src/core/: __init__.py
src/core/controllers/: __init__.py  arquivos_controller.py  conversao_controller.py  file_path_controller.py  info_sistema_controller.py  pasta_controller.py  pastas_controller.py  sistema_controller.ipynb  sistema_controller.py
src/core/models/: __init__.py  arquivo_model.py  base_item.py  conversao_models.py  model_arquivo.py  model_caminho_base.py  model_pasta.py  objects_models.py  pasta_model.py  pasta_models.py  sistema_info.py  teste.py
src/core/models/arquivo/: __init__.py  arquivo_model.py  tipos_model.py
src/core/models/pasta/: __init__.py  pasta_model.py
src/core/models/sistema/: __init__.py  sistema_info_model.py  sistema_operacional_model.py  tipos_comuns_model.py
src/core/services/: __init__.py  conversor_html.py  formatadores.py  pasta_service.py  processador_service.py  sistema_operacional.py  system_services.py  visor_service.py
src/core/utils/: __init__.py  file_utils.py  formatadores.py  sistema_operacional.py  system_utils.py
src/core/utils/exceptions/: __init__.py  file_exceptions.py
src/core/utils/filesystem/: __init__.py
src/core/utils/filesystem/detectores/: __init__.py  sistema_operacional.py
src/core/utils/filesystem/metadados/: __init__.py  coletor_permissoes.py  coletor_tempos.py  gerador_metadados.py
src/htmlreader/: __main__.py
src/htmlreader/core/models/: __init__.py  directory_model.py  exceptions.py  file_model.py  objects_models.py  processador_models.py  visor_models.py
src/htmlreader/core/services/: __init__.py  conversor_html.py  processador_service.py  text_analysis_service.py  text_file_service.py  visor_service.py
src/htmlreader/core/utils/: __init__.py  encoding_utils.py  file_utils.py  path_utils.py  system_utils.py
src/htmlreader/interfaces/api/: __init__.py  main_api.py
src/htmlreader/interfaces/api/routers/: processador_routes.py  visor_routes.py
src/htmlreader/interfaces/api/routes/: __init__.py  processador_routes.py  visor_routes.py
src/htmlreader/interfaces/cli/: __init__.py  cli.py  main_cli.py
src/htmlreader/interfaces/gui/: __init__.py  gui.py  main_gui.py
src/interfaces/: desenhos.drawio
src/interfaces/api/: __init__.py  main_api.py
src/interfaces/api/routes/: __init__.py  conversao_router.py  infosistema_routes.py  pasta_router.py  processador_routes.py  rota_sistema.py  visor_routes.py
src/interfaces/cli/: __init__.py  main_cli.py
src/interfaces/gui/: main_gui.py
src/interfaces/gui/widgets/: footer_widget.py  header_widget.py  main_section_widget.py  sidebar_widget.py
src/tests/core/models/: test_directory_model.py  test_file_model.py  test_objects_models.py  test_processador_models.py  test_visor_models.py
src/tests/core/services/: test_processador_service.py  test_text_analysis_service.py  test_text_file_service.py
src/tests/core/utils/: test_encoding_utils.py  test_file_utils.py  test_path_utils.py  test_system_utils.py
src/tests/interfaces/api/routes/: test_visor_api.py
tests/: conftest.py
tests/core/controllers/: test_arquivos_controller.py  test_pastas_controller.py  test_sistema_controller.py
tests/core/models/: test_model_arquivo.py  test_model_caminho_base.py  test_model_pasta.py
tests/core/services/: test_formatadores.py  test_sistema_operacional.py
tests/core/utils/: test_extratores.py  test_formatadores.py  test_sistema_operacional.py
