[flake8]
max-line-length = 120
exclude = .git,__pycache__,docs,venv

[coverage:run]
branch = True
source = app

[coverage:report]
omit =
    tests/*
    */__init__.py
show_missing = True
skip_covered = True

[tool:pytest]
addopts = --cov=app --cov-report=term-missing

[options]
packages = find:

[options.packages.find]
where = .

[mypy]
ignore_missing_imports = True
