[flake8]
max-line-length = 120
exclude = .git,__pycache__,docs,.venv,build,dist

[coverage:run]
branch = True
source = src

[coverage:report]
omit =
    tests/*
    */__init__.py
show_missing = True
skip_covered = True

[tool:pytest]
addopts = --cov=src --cov-report=term-missing

[options]
packages = find:

[options.packages.find]
where = src

[mypy]
ignore_missing_imports = True
disallow_untyped_defs = True
check_untyped_defs = True
warn_unused_ignores = True

[isort]
profile = black
line_length = 120
src_paths = src,tests
